--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -8,11 +8,11 @@
 }
 
 .header {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: 100vh;
   font-size: calc(10px + 2vmin);
 }
 
@@ -34,6 +34,6 @@
     transform: translateY(10px);
   }
   100% {
-    transform: translateY(0px);
+    transform: translateY(0);
   }
 }
